feat: release caffeine8 1.1.0 with dbus inhibitors and wayland support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,12 +2,13 @@
 find_package(X11 REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(MAGICK++ REQUIRED IMPORTED_TARGET Magick++)
+pkg_check_modules(DBUS REQUIRED IMPORTED_TARGET dbus-1)
 
 # Add executable
 add_executable(caffeine8 caffeine8.cpp)
 
 # Link libraries
-target_link_libraries(caffeine8 PRIVATE PkgConfig::MAGICK++ ${X11_LIBRARIES} Xpm)
+target_link_libraries(caffeine8 PRIVATE PkgConfig::MAGICK++ PkgConfig::DBUS ${X11_LIBRARIES} Xpm)
 
 # Include directories for X11
 target_include_directories(caffeine8 PRIVATE ${X11_INCLUDE_DIR})
